<resources>
    <string name="app_name">OnlineBook</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string-array name="age">
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_item_desc_placholder">In this chapter, you’re going to learn about the different types of subjects in RxJava, see how to work with each one and why you might choose one over another based on some common use cases.</string>
    <string name="note_detail_desc_placeholder">You’ve gotten a handle on what an Observable is, how to create one, how to subscribe to it, and how to dispose of things when you’re done. Observables are a fundamental part of RxJava, but a common need when developing apps is to manually add new values onto an Observable at runtime that will then be emitted to subscribers. What you want is something that can act as both an Observable and as an observer. And that something is called a subject.</string>
    <string name="error_description">Description missing</string>
    <string name="error_title">Title missing</string>
    <string name="error_tag_text">Enter text</string>
    <string name="enter_first_name">Enter name</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_job_title">Enter job title</string>
    <string name="enter_email">Enter email address</string>
    <string name="invalid_email">Invalid email entered</string>
    <string name="enter_password">Enter password</string>
    <string name="invalid_password">Your password must be at least 8 characters</string>
    <string name="same_password">Passwords are not the same</string>
    <string name="logout">Logout</string>
    <string name="noteListingFragment">Notes</string>
    <string name="taskListingFragment">Tasks</string>
    <string name="notes">Notes</string>
    <string name="tasks">Tasks</string>
    <string name="home_fragment">Home</string>
    <string name="create_task">Create Task</string>
    <string name="create">Create</string>
    <string name="done">Done</string>
    <string name="error_task_detail">Task detail is missing</string>
    <string name="enter_gender">Enter gender</string>
    <string name="mualliflar">Mualliflar</string>
    <string name="chegirmalar">Chegirmalar</string>
    <string name="oqilgan_kitoblar">Oqilgan kitoblar</string>
    <string name="promokod">Promokod</string>
    <string name="tilni_o_zgartirish">Tilni o\'zgartirish</string>
    <string name="bizning_ilovalar">Bizning Ilovalar</string>
    <string name="tungi_rejim">Tungi rejim</string>
    <string name="hazratim">Hazratim</string>
    <string name="audio">Audio</string>
    <string name="kitoblar">Kitoblar</string>
    <string name="dokon">Dokon</string>
    <string name="sahifam">Sahifam</string>
    <string name="registration">Registratsiya</string>
    <string name="forgot_password">Parolni unutdingizmi</string>
    <string name="log_in">Log in</string>
    <string name="authors">Mualliflar</string>
    <string name="muallif_nomini_kiriting">Muallif nomini kiriting</string>
    <string name="qo_shish">Qo\'shish</string>
</resources>