<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFAEF"
    tools:context=".presentation.user.profile.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center|start"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/bg_name">

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:text="Mustafo Abdugafurov"
                    android:id="@+id/name"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#787777"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:text="mustafoabdugafurov55@gmail.com"
                    android:id="@+id/email"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:id="@+id/authors"
                android:text="@string/mualliflar"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:id="@+id/read_let"
                android:text="@string/oqilgan_kitoblar"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:id="@+id/sales"
                android:text="@string/chegirmalar"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:id="@+id/kode"
                android:text="@string/promokod"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:id="@+id/change_lan"
                android:text="@string/tilni_o_zgartirish"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="normal"/>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textStyle="normal"
                android:id="@+id/change_theme"
                android:text="@string/tungi_rejim"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:id="@+id/our_apps"
                android:text="@string/bizning_ilovalar"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="normal"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>